--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
+    "framer-motion": "^4.1.17",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
